Cumulative changes for Open Loop YCSB